--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/composition-api": "^0.29.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-class-component": "^7.2.6",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "jest": "^27.0.5",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.3",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vue-property-decorator": "^9.1.2"
   }
 }
