--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/composition-api": "^0.29.2",
+    "@vue/apollo-composable": "^4.0.0-alpha.15",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
     "core-js": "^3.15.1",
+    "graphql-tag": "^2.12.5",
     "nuxt": "^2.15.7",
     "vue-class-component": "^7.2.6",
     "vuetify": "^2.5.5"
